# Variable_Buoyancy_System_ROS2

./: README.md
auv_control/launch/: pose_launch.py  pose_setpoint.yaml  wrench.yaml  wrench_launch.py
auv_control/src/: controller_io.cpp
slider_publisher/: package.xml  setup.cfg  setup.py
thruster_manager/: package.xml
vbs_tethys/vbs_control/: CMakeLists.txt  package.xml
vbs_tethys/vbs_control/config/: anchors.yaml  cascaded_pid.yaml  sliding_mode.yaml  tethys.rviz  thruster_manager.yaml
vbs_tethys/vbs_control/launch/: ballast_control.py  cascaded_pids_launch.py  rviz_launch.py  sliding_mode_launch.py  wrench_launch.py
vbs_tethys/vbs_description/: CMakeLists.txt  package.xml
vbs_tethys/vbs_description/include/demo_ballast_plugin/: BallastPlugin.hh
vbs_tethys/vbs_description/launch/: ballast_gui.py  force.yaml  gui_launch.py  manual.yaml  state_publisher_launch.py  upload_vbs_launch.py  world_launch.py
vbs_tethys/vbs_description/meshes/: ballast_tank.dae  ballast_tank.stl  ballast_tank_1.stl  ballast_tank_2.stl  ballast_tank_3.stl  ballast_tank_4.stl
vbs_tethys/vbs_description/meshes/materials/: ballast_tank.dae
vbs_tethys/vbs_description/models/Coast Water/: model.sdf
vbs_tethys/vbs_description/plugins/: BuoyancyEnginePlugin.cc  BuoyancyEnginePlugin.hh  buoyant_force_system.cpp
vbs_tethys/vbs_description/scripts/: ballast_gui.py
vbs_tethys/vbs_description/src/: BallastPlugin.cc  ballast_control_plugin.cpp
vbs_tethys/vbs_description/src/ballast_control_plugin/: ballast_control_plugin.cpp
vbs_tethys/vbs_description/urdf/: ballast.xacro  sensors.xacro  tethys.urdf  tethys.xacro  underwater_world.sdf  vbs.xacro
