<?xml version="1.0"?>
<package format="3">
  <name>vbs_description</name>
  <version>0.1.0</version>
  <description>The vbs_description package</description>

  <maintainer email="abineshthankaraj2004@gmail.com">Abinesh Thankaraj</maintainer>

  <license>MIT</license>
  <exec_depend>ros_gz_interfaces</exec_depend>
  <exec_depend>python3-pyqt5</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pyqtgraph</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
